# botforge

./: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  create.sql  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
src/botforge/: __main__.py  main.py
src/botforge/core/: config.py  database.py  logger.py  redis.py  vector_model.py
src/botforge/models/: __init__.py  background_job.py  bot.py
src/botforge/repositories/: __init__.py
src/botforge/repository/: background_job.py  bot.py
src/botforge/routes/: __init__.py  bot.py  embed.py  query.py  upload.py
src/botforge/services/: __init__.py  caching.py  query_engine.py  uploader.py  vector_query.py
