[project]
name = "botforge"
version = "0.1.0"
description = "Botforge RAG Portal"
authors = ["Swapnil Sharma <swapnil.sharma1998@gmail.com>"]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sentence-transformers",
  "numpy",
  "upstash-vector",
  "pydantic",
  "python-dotenv",
  "sqlalchemy",
  "asyncpg",
  "pydantic-settings",
  "PyPDF2",
  "openai>=1.0.0",
  "asyncio"
]


[tool.uv]
virtualenvs.in-project = true
